--- a/App.css
+++ b/App.css
@@ -3,7 +3,7 @@ body {
 }
 
 .App {
-    padding: 20px;
+    padding: 10px;
     max-width: 1440px;
     margin: 0 auto;
 }
@@ -13,8 +13,12 @@ body {
     font-family: 'Merienda', cursive;
     font-weight: bold;
     color: #999;
-    border-bottom: 1px solid #eee;
-    padding-bottom: 20px;
+}
+
+@media(min-width:768px) {
+    .App-title {
+        padding-bottom: 15px;
+    }
 }
 
 h1, h2, h3, h4 {
@@ -23,8 +27,7 @@ h1, h2, h3, h4 {
 
 h1 {
     color: #317eac;
-    padding-top: 15px;
-    font-size: 2.25rem;
+    font-size: 2.2rem;
 }
 
 h2 {
